--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:orientation="vertical">
+    android:background="@color/white"
+    >
 
 
 
@@ -11,30 +11,31 @@
         android:id="@+id/toolbar_container"
         android:layout_width="match_parent"
         android:layout_height="112dp"
-        android:background="@color/primary"
-        android:elevation="4dp">
+
+
+        >
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/tb_collapsing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+
             android:layout_marginLeft="@dimen/list_toolbar_side_margin"
             android:layout_marginRight="@dimen/list_toolbar_side_margin"
             android:layout_width="match_parent"
-
-            android:layout_height="?actionBarSize"
+            app:layout_collapseMode="pin"
+            android:layout_height="80dp"
             android:layout_gravity="bottom">
         </android.support.v7.widget.Toolbar>
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
                 android:src="@drawable/logo"
                 app:layout_collapseMode="parallax"
-                android:layout_gravity="center|bottom"
+                android:layout_gravity="center"
                 android:contentDescription="@string/app_name" />
 
 
