--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -11,30 +11,30 @@
 
 
 
-
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/ab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/photo_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/photo_placeholder">
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+               >
                 <!--suppress AndroidLintContentDescription -->
                 <ImageView
                     android:id="@+id/photo"
                     android:layout_width="match_parent"
                     android:layout_height="316dp"
                     android:scaleType="centerCrop"
-                    app:layout_collapseMode="pin"
+                    app:layout_collapseMode="parallax"
 
                      />
 
-                <android.support.v7.widget.Toolbar
-                    android:layout_width="match_parent"
-                    android:layout_height="112dp"
-                    android:background="@drawable/photo_background_protection" />
 
             </android.support.design.widget.CollapsingToolbarLayout>
-
+        </android.support.design.widget.AppBarLayout>
         <com.example.xyzreader.ui.ObservableScrollView
             android:id="@+id/scrollview"
             android:layout_width="match_parent"
