--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="primary_dark">#378ea6</color>
     <color name="accent">#827080</color>
     <color name="ltgray">#3dd3d3d3</color>
+    <color name="white">#fff</color>
 </resources>
